# semkon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push_checks.yml
semkon/: clients.py  code_quoting.py  env_vars.py  file_filters.py  main.py  properties.py  python_deps.py  safe_sympy.py
tests/: test_properties.py
tests/example_repo/example_repo/: foo.py
