[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9,<4"
name = "semkon"
dependencies = [
    "chromadb==0.6.*",
    "gitignore-parser==0.1.*",
    "loguru==0.7.*",
    "openai==1.60.*",
    "pydantic==2.10.*",
    "pydantic-settings",
    "pydeps==3.0.*",
    "tiktoken==0.8.*",
    "typer==0.15.*",
]
version = "0.0.0"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pyright",
]

[project.scripts]
semkon = "semkon.main:cli"

[tool.setuptools.packages.find]
include = ["semkon"]
namespaces = false

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2
combine_as_imports = true

[tool.pyright]
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
exclude = ["tests/example_repo"]

[tool.ruff]
lint.select = ["F401"]
line-length = 80

